infra/dev/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tadoku
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: langlog.be
    http:
      paths:
        # api service mappings are managed in infra/dev/ory/access_rules.yaml
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: oathkeeper-proxy
              port:
                number: 4455
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tadoku-stripped-path
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - host: langlog.be
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-webv2
              port:
                number: 3000
        - path: /oathkeeper
          pathType: Prefix
          backend:
            service:
              name: oathkeeper-api
              port:
                number: 4456
        - path: /pgweb
          pathType: Prefix
          backend:
            service:
              name: pgweb
              port:
                number: 8081
        - path: /mail
          pathType: Prefix
          backend:
            service:
              name: mailhog
              port:
                number: 8025
  - host: account.langlog.be
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-auth
              port:
                number: 3000
        - path: /kratos-private
          pathType: Prefix
          backend:
            service:
              name: kratos-admin
              port:
                number: 80
        - path: /kratos
          pathType: Prefix
          backend:
            service:
              name: kratos-public
              port:
                number: 80
